# workflows

./: .gitignore  README.md  example.env  main.py  pyproject.toml
system_info/: .gitignore  main.py  pyproject.toml  start-phoenix.sh
system_info/agent/: __init__.py  agent.py  constants.py  graph.py  logger.py  prompts.py  state.py  tools.py
system_info/templates/: __init__.py  templates.py
system_info/templates/prompts/: service_info_prompt.md  setup_steps_prompt.md
system_info/workflow/: __init__.py  agents.py  constants.py  graph.py  nodes.py  prompts.py  state.py  tools.py
workflow/: __init__.py  agents.py  constants.py  graph.py  nodes.py  prompts.py  state.py  tools.py  utils.py
