[project]
name = "system-info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "arize-phoenix-otel>=0.14.0",
    "bs4>=0.0.2",
    "ddgs>=9.9.3",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-google-genai>=4.0.0",
    "langgraph>=1.0.3",
    "openinference-instrumentation-langchain>=0.1.56",
    "playwright>=1.57.0",
    "requests>=2.32.5",
]
