[project]
name = "system-info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "ddgs>=9.9.1",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "google-genai>=1.50.1",
    "grandalf>=0.8",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.2",
    "langgraph>=0.2.59",
]
